--- a/static/global.css
+++ b/static/global.css
@@ -1,14 +1,16 @@
 @import 'normalize.css';
 
+html {
+	--body-padding: 1em;
+	--text-primary: rgba(0, 0, 0, 0.9);
+	--text-secondary: rgba(0, 0, 0, 0.6);
+}
+
 body {
 	margin: 0;
 	font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen,
 		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-	font-size: 16px;
+	font-size: 100%;
 	line-height: 1.5;
-	color: rgba(0, 0, 0, 0.9);
-}
-
-html {
-	--body-padding: 1em;
+	color: var(--text-primary);
 }
