--- a/static/global.css
+++ b/static/global.css
@@ -18,7 +18,9 @@ html {
 	--text-secondary: rgba(0, 0, 0, 0.6);
 	--background-color: ghostwhite;
 	--background-punch: white;
-	--theme-primary: maroon;
+	--theme-primary: #2e307f;
+	--theme-primary-bg: #1d1d40;
+	--theme-accent: darkgoldenrod;
 }
 
 body {
