Update theme color

--- a/static/global.css
+++ b/static/global.css
@@ -35,7 +35,7 @@ html {
 	--text-secondary: rgba(0, 0, 0, 0.6);
 	--background-color: ghostwhite;
 	--background-punch: white;
-	--theme-primary: #2e307f;
+	--theme-primary: #2d3461;
 	--theme-primary-dark: #1d1d40;
 	--theme-accent: darkgoldenrod;
 	--theme-accent-light: palegoldenrod;
